changed ashfaq gender

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <h2>Let's Fucking Go!!</h2>
         <h3>Nigga</h3>
         <div class="box">
-            <h3>I am a box!</h3>
+            <h3>Ashfaq is GAY!</h3>
         </div>
     </div>
 </body>
