--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         }
         html,body{
-            background: #0849e1;
+            background: #000000;
             color: aliceblue;
             height: 100vh;
             overflow: hidden;
