--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         }
         html,body{
             background: #000000;
-            color: aliceblue;
+            color: rgb(0, 255, 255);
             height: 100vh;
             overflow: hidden;
             
@@ -32,7 +32,7 @@
             /* color: crimson; */
         }
         .box{
-            border: 2px solid white;
+            border: 2px solid rgb(255, 0, 0);
             border-radius: 5px;
             padding: 10px;
 
