--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         }
         html,body{
             background: #000000;
-            color: rgb(0, 255, 255);
+            color: rgb(255, 0, 0);
             height: 100vh;
             overflow: hidden;
             
@@ -45,7 +45,7 @@
 </head>
 <body>
     <div class="main">
-        <h1>Welcome to the Workshop!</h1>
+        <h1>Welcome to the Shitshop!</h1>
         <h2>Let's Fucking Go!!</h2>
         <h3>Nigga</h3>
         <div class="box">
